--- a/app/crosswalk.html
+++ b/app/crosswalk.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <!-- <base href="/"> -->
 
-    <title>Сервисы - Брянский урбанист</title>
+    <title>Карта пешеходных переходов - Брянский урбанист</title>
     <meta name="description" content="">
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
