Добавил страницы меню

--- a/app/crosswalk.html
+++ b/app/crosswalk.html
@@ -35,9 +35,9 @@
                     <div class="header-menu col-xl-5">
                         <ul class="header__ul">
                             <a href="index.html"><li>Сервисы</li></a>
-                            <a href="#"><li>База знаний</li></a>
-                            <a href="#"><li>О нас</li></a>
-                            <a href="#"><li>Помочь</li></a>
+                            <a href="knowledge.html"><li>База знаний</li></a>
+                            <a href="about.html"><li>О нас</li></a>
+                            <a href="help.html"><li>Помочь</li></a>
                         </ul>
                     </div>
                     <div class="header-logo col-xl-2">
