--- a/app/knowledge.html
+++ b/app/knowledge.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<!-- <base href="/"> -->
 
-	<title>Сервисы - Брянский урбанист</title>
+	<title>База знаний - Брянский урбанист</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -58,49 +58,7 @@
 
 	<main>
 		<div class="container container-main">
-			<div class="row title-wrap">
-				<div class="title-block">
-					<h1 class="h1-title title">Городские сервисы от урбаниста</h1>
-					<h2 class="h2-subtitle subtitle">Мы разрабатываем сайты, которые делают город лучше</h2>
-				</div>
-			</div>
-			<div class="row content-wrap">
-				<div class="col-xl-4 card-crosswalk">
-					<a href="crosswalk.html">
-						<div class="card-content card">
-							<div class="card-img-wraper">
-								<img src="img/card/location.svg" alt="" class="card__img location">
-							</div>
-							<div class="card-text">
-								<h2 class="card-title">Карта пешеходных переходов</h2>
-								<h3 class="card-subtitle">Где в Брянске нужны перешеходные переходы</h3>
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-xl-4 card-soon">
-					<div class="card-content card">
-						<div class="card-img-wraper">
-							<img src="img/card/soon.svg" alt="" class="card__img location">
-						</div>
-						<div class="card-text">
-							<h2 class="card-title">Скоро</h2>
-							<h3 class="card-subtitle"></h3>
-						</div>
-					</div>
-				</div>
-				<div class="col-xl-4 card-soon">
-					<div class="card-content card">
-						<div class="card-img-wraper">
-							<img src="img/card/soon.svg" alt="" class="card__img location">
-						</div>
-						<div class="card-text">
-							<h2 class="card-title">Скоро</h2>
-							<h3 class="card-subtitle"></h3>
-						</div>
-					</div>
-				</div>
-			</div>
+			
 		</div>
 	</main>
 
