--- a/app/crosswalk.html
+++ b/app/crosswalk.html
@@ -88,7 +88,7 @@
                         <div class="custom-control control-block custom-checkbox">
                             <input type="checkbox" class="custom-control-input" id="customCheck2">                          
                             <label class="custom-control-label" for="customCheck2">
-                                <span>Перекрыли пешеходный переход</span>
+                                <span>Перекрыли удобный переход</span>
                                 <div class="img-wraper">
                                     <img class="control__img" src="img/crosswalk/filter/fence.svg" alt="block_crosswalk">
                                 </div>
