--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
 		<div class="container container-main">
 			<div class="row title-wrap">
 				<div class="title-block">
-					<h1 class="h1-title title">Городские сервисы от урбаниста</h1>
+					<h1 class="h1-title title">Городские сервисы урбаниста</h1>
 					<h2 class="h2-subtitle subtitle">Мы разрабатываем сайты, которые делают город лучше</h2>
 				</div>
 			</div>
