Добавил "базу знаний", "образец статьи статью"

--- a/app/article.html
+++ b/app/article.html
@@ -28,6 +28,9 @@
 
 	<link rel="stylesheet" href="css/knowledge.css">
 
+	<script src="likely.js"></script>
+	<link rel="stylesheet" href="likely.css">
+
 </head>
 
 <body>
@@ -72,134 +75,64 @@
 	<main>
 		<div class="container mt-5">
 			<div class="row">
-				<div class="col-md-9">
+				<div class="col-md-1"></div>
+				<div class="col-md-10">
 					<div class="text-left">
-						<h3>База знаний</h3>
-						<p>Рассказываем и показываем, как сделать город лучше.</p>
+						<h3>Как сделать безопасный пешеходный переход</h3>
+						<p>Почему важно сделать пешехода заметным.</p>
 					</div>
-				</div>
-				<div class="col-md-3">
-					<div class="input-group mb-3">
-						<input type="text" class="form-control" placeholder="Что найти?" aria-label="Recipient's username"
-							aria-describedby="basic-addon2">
-						<div class="input-group-append">
-							<button class="btn btn-outline-success" type="button">Искать</button>
+
+					<div class="main mt-5">
+						<img class="img-fluid" width="70%" height="auto" src="img/articles/title.png" alt="">
+					</div>
+
+					<div class="row">
+						<div class="col-md-10">
+							<p class="mt-5">Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться.</p>
+							<p class="mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt numquam esse, ullam fuga repellendus labore ducimus aliquam dolor maiores quas. Iusto eligendi quasi tempora incidunt doloribus fugit ut, adipisci quae?</p>
+							<p class="mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas est cum ducimus impedit delectus cumque, voluptates unde dolor minus! Quaerat vel nam minima excepturi aperiam. Iure temporibus dolorem ipsa numquam?</p>
+
+							<h5 class="mt-5">Подзаголовок</h5>
+							<p class="mt-3">Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться.</p>
+							<p class="mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt numquam esse, ullam fuga repellendus labore ducimus aliquam dolor maiores quas. Iusto eligendi quasi tempora incidunt doloribus fugit ut, adipisci quae?</p>
+							<img class="img-fluid mt-5 mb-3" width="70%" height="auto" src="img/articles/title.png" alt="">
+							<p class="mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas est cum ducimus impedit delectus cumque, voluptates unde dolor minus! Quaerat vel nam minima excepturi aperiam. Iure temporibus dolorem ipsa numquam?</p>
+							<div class="likely pt-5 mb-5">
+								<div class="vkontakte"><strong class="medium-bold">11</strong></div>
+								<div class="telegram"><strong class="medium-bold">Отправить</strong></div>
+							</div>
 						</div>
 					</div>
+					<h5>Другие статьи из раздела</h5>
+
+						<div class="row mb-5">
+							<div class="col-md-4 mt-3">
+								<div class="blank"></div>
+								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
+							</div>
+							<div class="col-md-4 mt-3">
+								<div class="blank"></div>
+								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
+							</div>
+							<div class="col-md-4 mt-3">
+								<div class="blank"></div>
+								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
+							</div>
+						</div>
 				</div>
+				<div class="col-md-1"></div>
 			</div>
-
-			<div class="mt-5">
-				<div class="row">
-					<div class="col-md-9">
-						<h5>Все статьи</h5>
-
-						<div class="row">
-							<div class="col-md-4 mt-3">
-								<div class="blank"></div>
-								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
-							</div>
-							<div class="col-md-4 mt-3">
-								<div class="blank"></div>
-								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
-							</div>
-							<div class="col-md-4 mt-3">
-								<div class="blank"></div>
-								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
-							</div>
-							<div class="col-md-4 mt-3">
-								<div class="blank"></div>
-								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-md-3">
-						<h5>Разделы</h5>
-						<div class="list-group list-group-flush">
-							<a href="#" class="list-group-item list-group-item-action no-border">
-								<div class="row">
-									<div class="col-3">
-										<div class="division my-2"></div>
-									</div>
-									<div class="col-9">
-										<div class="my-2 pl-2">
-											<p><strong>Транспорт</strong></p>
-											<p class="text-muted text-mini">7 статей</p>
-										</div>
-									</div>
-								</div>
-							</a>
-							<a href="#" class="list-group-item list-group-item-action no-border">
-								<div class="row">
-									<div class="col-3">
-										<div class="division my-2"></div>
-									</div>
-									<div class="col-9">
-										<div class="my-2 pl-2">
-											<p><strong>Благоустройство</strong></p>
-											<p class="text-muted text-mini">20 статей</p>
-										</div>
-									</div>
-								</div>
-							</a>
-							<a href="#" class="list-group-item list-group-item-action no-border">
-								<div class="row">
-									<div class="col-3">
-										<div class="division my-2"></div>
-									</div>
-									<div class="col-9">
-										<div class="my-2 pl-2">
-											<p><strong>Тактический урбанизм</strong></p>
-											<p class="text-muted text-mini">2 статьи</p>
-										</div>
-									</div>
-								</div>
-							</a>
-							<a href="#" class="list-group-item list-group-item-action no-border">
-								<div class="row">
-									<div class="col-3">
-										<div class="division my-2"></div>
-									</div>
-									<div class="col-9">
-										<div class="my-2 pl-2">
-											<p><strong>Городской дизайн</strong></p>
-											<p class="text-muted text-mini">1 статья</p>
-										</div>
-									</div>
-								</div>
-							</a>
-							<a href="#" class="list-group-item list-group-item-action no-border">
-								<div class="row">
-									<div class="col-3">
-										<div class="division my-2"></div>
-									</div>
-									<div class="col-9">
-										<div class="my-2 pl-2">
-											<p><strong>Дорожная безопасность</strong></p>
-											<p class="text-muted text-mini">5 статей</p>
-										</div>
-									</div>
-								</div>
-							</a>
-						</div>
-						<a href="#" class="text-muted text-mini underlined pt-2">Все разделы</a>
-					</div>
-				</div>
-			</div>
-
 		</div>
 	</main>
-	<br><br><br>
-	<footer class="pt-5">
-		<div class="container-fluid container-header">
+	<!-- <footer class="pt-5">
+		<div class="container-fluid container-header fixed-bottom">
 			<div class="container header-wrap">
 				<div class="row">
 					<div style="font-weight: 400; opacity: 0.3; color: white">Егор Кондрашов 2019</div>
 				</div>
 			</div>
 		</div>
-	</footer>
+	</footer> -->
 
 	<script src="js/scripts.min.js"></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
