Поправил "базу знаний"

--- a/app/knowledge.html
+++ b/app/knowledge.html
@@ -25,7 +25,6 @@
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap&subset=cyrillic,cyrillic-ext"
 		rel="stylesheet">
 	<link rel="stylesheet" href="css/main.min.css">
-
 	<link rel="stylesheet" href="css/knowledge.css">
 
 </head>
@@ -74,13 +73,13 @@
 			<div class="row">
 				<div class="col-md-9">
 					<div class="text-left">
-						<h3>База знаний</h3>
-						<p>Рассказываем и показываем, как сделать город лучше.</p>
+						<h1 class="h1-title title">База знаний</h1>
+						<h2 class="h2-subtitle subtitle">Рассказываем и показываем, как сделать город лучше.</h2>
 					</div>
 				</div>
-				<div class="col-md-3">
-					<div class="input-group mb-3">
-						<input type="text" class="form-control" placeholder="Что найти?" aria-label="Recipient's username"
+				<div class="col-md-3 search-block">
+					<div class="input-group">
+						<input type="text" class="form-control" placeholder="Поиск по статьям" aria-label="Recipient's username"
 							aria-describedby="basic-addon2">
 						<div class="input-group-append">
 							<button class="btn btn-outline-success" type="button">Искать</button>
@@ -95,19 +94,21 @@
 						<h5>Все статьи</h5>
 
 						<div class="row">
-							<div class="col-md-4 mt-3">
+							<div class="col-md-4 mt-3 blank-block">
+								<a href="article.html">
+									<div class="blank"></div>
+									<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
+								</a>
+							</div>
+							<div class="col-md-4 mt-3 blank-block">
 								<div class="blank"></div>
 								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
 							</div>
-							<div class="col-md-4 mt-3">
+							<div class="col-md-4 mt-3 blank-block">
 								<div class="blank"></div>
 								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
 							</div>
-							<div class="col-md-4 mt-3">
-								<div class="blank"></div>
-								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
-							</div>
-							<div class="col-md-4 mt-3">
+							<div class="col-md-4 mt-3 blank-block">
 								<div class="blank"></div>
 								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
 							</div>
