Сделал основные правки основного блока базы знаний

--- a/app/article.html
+++ b/app/article.html
@@ -22,7 +22,7 @@
 	<!-- Custom Browsers Color Start -->
 	<meta name="theme-color" content="#000">
 	<!-- Custom Browsers Color End -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap&subset=cyrillic,cyrillic-ext"
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,500&display=swap&subset=cyrillic,cyrillic-ext"
 		rel="stylesheet">
 	<link rel="stylesheet" href="css/main.min.css">
 
@@ -77,35 +77,36 @@
 			<div class="row">
 				<div class="col-md-10">
 					<div class="text-left">
-						<h3>Как сделать безопасный пешеходный переход</h3>
-						<p>Почему важно сделать пешехода заметным.</p>
+						<h1 class="h1-title title">Как сделать безопасный пешеходный переход</h1>
+						<h2 class="h2-subtitle subtitle">Почему важно сделать пешехода заметным.</h2>
 					</div>
 
 					<div class="main mt-5">
-						<img class="img-fluid" width="70%" height="auto" src="img/articles/title.png" alt="">
+						<img class="black article-img" width="70%" height="auto" src="img/articles/title.jpg" alt="title">
 					</div>
 
 					<div class="row">
 						<div class="col-md-10">
-							<p class="mt-5">Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться.</p>
-							<p class="mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt numquam esse, ullam fuga repellendus labore ducimus aliquam dolor maiores quas. Iusto eligendi quasi tempora incidunt doloribus fugit ut, adipisci quae?</p>
-							<p class="mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas est cum ducimus impedit delectus cumque, voluptates unde dolor minus! Quaerat vel nam minima excepturi aperiam. Iure temporibus dolorem ipsa numquam?</p>
+							<p class="article-text article-p">Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться.</p>
+							<p class="article-text article-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt numquam esse, ullam fuga repellendus labore ducimus aliquam dolor maiores quas. Iusto eligendi quasi tempora incidunt doloribus fugit ut, adipisci quae?</p>
+							<p class="article-text article-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas est cum ducimus impedit delectus cumque, voluptates unde dolor minus! Quaerat vel nam minima excepturi aperiam. Iure temporibus dolorem ipsa numquam?</p>
 
-							<h5 class="mt-5">Подзаголовок</h5>
-							<p class="mt-3">Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться.</p>
-							<p class="mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt numquam esse, ullam fuga repellendus labore ducimus aliquam dolor maiores quas. Iusto eligendi quasi tempora incidunt doloribus fugit ut, adipisci quae?</p>
-							<img class="img-fluid mt-5 mb-3" width="70%" height="auto" src="img/articles/title.png" alt="">
-							<p class="mt-3">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas est cum ducimus impedit delectus cumque, voluptates unde dolor minus! Quaerat vel nam minima excepturi aperiam. Iure temporibus dolorem ipsa numquam?</p>
-							<div class="likely pt-5 mb-5">
+							<h5 class="article-text article-title">Подзаголовок</h5>
+							<p class="article-text article-p">Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться.</p>
+							<p class="article-text article-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt numquam esse, ullam fuga repellendus labore ducimus aliquam dolor maiores quas. Iusto eligendi quasi tempora incidunt doloribus fugit ut, adipisci quae?</p>
+							<img class="article-img mt-5 mb-3" width="70%" height="auto" src="img/articles/subtitle.jpg" alt="sub">
+							<p class="article-text img-p">Lorem ipsum dolor sit amet consectetur</p>
+							<p class="article-text article-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas est cum ducimus impedit delectus cumque, voluptates unde dolor minus! Quaerat vel nam minima excepturi aperiam. Iure temporibus dolorem ipsa numquam?</p>
+							<div class="likely pt-5">
 								<div class="vkontakte"><strong class="medium-bold">11</strong></div>
 								<div class="telegram"><strong class="medium-bold">Отправить</strong></div>
 							</div>
 						</div>
 					</div>
-					<h5>Другие статьи из раздела</h5>
+					<h5 class="article-text article-title">Другие статьи из раздела</h5>
 
-						<div class="row mb-5">
-							<div class="col-md-4 mt-3">
+						<div class="row">
+							<div class="col-md-4">
 								<div class="blank"></div>
 								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
 							</div>
@@ -122,6 +123,17 @@
 			</div>
 		</div>
 	</main>
+
+	<footer>
+		<div class="container-fluide container-footer">
+			<div class="container header-wrap">
+				<div class="row">
+					<div style="font-weight: 400; opacity: 0.3; color: white">Егор Кондрашов 2019</div>
+				</div>
+			</div>
+		</div>
+	</footer>
+
 	<!-- <footer class="pt-5">
 		<div class="container-fluid container-header fixed-bottom">
 			<div class="container header-wrap">
