--- a/app/crosswalk.html
+++ b/app/crosswalk.html
@@ -22,7 +22,7 @@
     <!-- Custom Browsers Color Start -->
     <meta name="theme-color" content="#000">
     <!-- Custom Browsers Color End -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900&display=swap&subset=cyrillic"
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900,500&display=swap&subset=cyrillic"
         rel="stylesheet">
     <link rel="stylesheet" href="css/main.min.css">
 
@@ -68,7 +68,7 @@
         </div>
     </header>
 
-    <main class="main-crosswalk">
+    <main class="main-crosswalk main">
         <div class="container container-crosswalk">
             <div class="row row-filter">
                 <div class="col-lg-3 authorize-block">
