--- a/app/knowledge.html
+++ b/app/knowledge.html
@@ -22,7 +22,7 @@
 	<!-- Custom Browsers Color Start -->
 	<meta name="theme-color" content="#000">
 	<!-- Custom Browsers Color End -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap&subset=cyrillic,cyrillic-ext"
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,500&display=swap&subset=cyrillic,cyrillic-ext"
 		rel="stylesheet">
 	<link rel="stylesheet" href="css/main.min.css">
 	<link rel="stylesheet" href="css/knowledge.css">
@@ -69,10 +69,10 @@
 	</header>
 
 	<main>
-		<div class="container mt-5">
+		<div class="container">
 			<div class="row">
 				<div class="col-md-9">
-					<div class="text-left">
+					<div class="text-left title-block">
 						<h1 class="h1-title title">База знаний</h1>
 						<h2 class="h2-subtitle subtitle">Рассказываем и показываем, как сделать город лучше.</h2>
 					</div>
@@ -88,112 +88,110 @@
 				</div>
 			</div>
 
-			<div class="mt-5">
-				<div class="row">
-					<div class="col-md-9">
-						<h5>Все статьи</h5>
-
-						<div class="row">
-							<div class="col-md-4 mt-3 blank-block">
-								<a href="article.html">
-									<div class="blank"></div>
-									<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
-								</a>
-							</div>
-							<div class="col-md-4 mt-3 blank-block">
+			<div class="row">
+				<div class="col-md-9">
+					<h5 class="h5-title">Все статьи</h5>
+					<div class="row">
+						<div class="col-md-4 mt-3 blank-block">
+							<a href="article.html">
 								<div class="blank"></div>
 								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
-							</div>
-							<div class="col-md-4 mt-3 blank-block">
-								<div class="blank"></div>
-								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
-							</div>
-							<div class="col-md-4 mt-3 blank-block">
-								<div class="blank"></div>
-								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
-							</div>
-						</div>
-					</div>
-
-					<div class="col-md-3">
-						<h5>Разделы</h5>
-						<div class="list-group list-group-flush">
-							<a href="#" class="list-group-item list-group-item-action no-border">
-								<div class="row">
-									<div class="col-3">
-										<div class="division my-2"></div>
-									</div>
-									<div class="col-9">
-										<div class="my-2 pl-2">
-											<p><strong>Транспорт</strong></p>
-											<p class="text-muted text-mini">7 статей</p>
-										</div>
-									</div>
-								</div>
-							</a>
-							<a href="#" class="list-group-item list-group-item-action no-border">
-								<div class="row">
-									<div class="col-3">
-										<div class="division my-2"></div>
-									</div>
-									<div class="col-9">
-										<div class="my-2 pl-2">
-											<p><strong>Благоустройство</strong></p>
-											<p class="text-muted text-mini">20 статей</p>
-										</div>
-									</div>
-								</div>
-							</a>
-							<a href="#" class="list-group-item list-group-item-action no-border">
-								<div class="row">
-									<div class="col-3">
-										<div class="division my-2"></div>
-									</div>
-									<div class="col-9">
-										<div class="my-2 pl-2">
-											<p><strong>Тактический урбанизм</strong></p>
-											<p class="text-muted text-mini">2 статьи</p>
-										</div>
-									</div>
-								</div>
-							</a>
-							<a href="#" class="list-group-item list-group-item-action no-border">
-								<div class="row">
-									<div class="col-3">
-										<div class="division my-2"></div>
-									</div>
-									<div class="col-9">
-										<div class="my-2 pl-2">
-											<p><strong>Городской дизайн</strong></p>
-											<p class="text-muted text-mini">1 статья</p>
-										</div>
-									</div>
-								</div>
-							</a>
-							<a href="#" class="list-group-item list-group-item-action no-border">
-								<div class="row">
-									<div class="col-3">
-										<div class="division my-2"></div>
-									</div>
-									<div class="col-9">
-										<div class="my-2 pl-2">
-											<p><strong>Дорожная безопасность</strong></p>
-											<p class="text-muted text-mini">5 статей</p>
-										</div>
-									</div>
-								</div>
 							</a>
 						</div>
-						<a href="#" class="text-muted text-mini underlined pt-2">Все разделы</a>
+						<div class="col-md-4 mt-3 blank-block">
+							<div class="blank"></div>
+							<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
+						</div>
+						<div class="col-md-4 mt-3 blank-block">
+							<div class="blank"></div>
+							<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
+						</div>
+						<div class="col-md-4 mt-3 blank-block">
+							<div class="blank"></div>
+							<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
+						</div>
 					</div>
+				</div>
+
+				<div class="col-md-3">
+					<h5>Разделы</h5>
+					<div class="list-group list-group-flush">
+						<a href="#" class="list-group-item list-group-item-action no-border">
+							<div class="row">
+								<div class="col-3">
+									<div class="division my-2"></div>
+								</div>
+								<div class="col-9">
+									<div class="my-2 pl-2">
+										<p><strong>Транспорт</strong></p>
+										<p class="text-muted text-mini">7 статей</p>
+									</div>
+								</div>
+							</div>
+						</a>
+						<a href="#" class="list-group-item list-group-item-action no-border">
+							<div class="row">
+								<div class="col-3">
+									<div class="division my-2"></div>
+								</div>
+								<div class="col-9">
+									<div class="my-2 pl-2">
+										<p><strong>Благоустройство</strong></p>
+										<p class="text-muted text-mini">20 статей</p>
+									</div>
+								</div>
+							</div>
+						</a>
+						<a href="#" class="list-group-item list-group-item-action no-border">
+							<div class="row">
+								<div class="col-3">
+									<div class="division my-2"></div>
+								</div>
+								<div class="col-9">
+									<div class="my-2 pl-2">
+										<p><strong>Тактический урбанизм</strong></p>
+										<p class="text-muted text-mini">2 статьи</p>
+									</div>
+								</div>
+							</div>
+						</a>
+						<a href="#" class="list-group-item list-group-item-action no-border">
+							<div class="row">
+								<div class="col-3">
+									<div class="division my-2"></div>
+								</div>
+								<div class="col-9">
+									<div class="my-2 pl-2">
+										<p><strong>Городской дизайн</strong></p>
+										<p class="text-muted text-mini">1 статья</p>
+									</div>
+								</div>
+							</div>
+						</a>
+						<a href="#" class="list-group-item list-group-item-action no-border">
+							<div class="row">
+								<div class="col-3">
+									<div class="division my-2"></div>
+								</div>
+								<div class="col-9">
+									<div class="my-2 pl-2">
+										<p><strong>Дорожная безопасность</strong></p>
+										<p class="text-muted text-mini">5 статей</p>
+									</div>
+								</div>
+							</div>
+						</a>
+					</div>
+					<a href="#" class="text-muted text-mini underlined pt-2">Все разделы</a>
 				</div>
 			</div>
 
+
 		</div>
 	</main>
-	<br><br><br>
-	<footer class="pt-5">
-		<div class="container-fluid container-header">
+
+	<footer>
+		<div class="container-fluide container-footer">
 			<div class="container header-wrap">
 				<div class="row">
 					<div style="font-weight: 400; opacity: 0.3; color: white">Егор Кондрашов 2019</div>
