Изменил дизайн других разделов на странице базы знаний

--- a/app/knowledge.html
+++ b/app/knowledge.html
@@ -115,72 +115,67 @@
 
 				<div class="col-md-3">
 					<h5>Разделы</h5>
-					<div class="list-group list-group-flush">
-						<a href="#" class="list-group-item list-group-item-action no-border">
-							<div class="row">
-								<div class="col-3">
-									<div class="division my-2"></div>
+					<div class="division-block">
+						<div class="division-wrap">
+							<div class="division division-img">
+							</div>
+							<div class="division-text">
+								<div class="division-title">
+									Транспорт
 								</div>
-								<div class="col-9">
-									<div class="my-2 pl-2">
-										<p><strong>Транспорт</strong></p>
-										<p class="text-muted text-mini">7 статей</p>
-									</div>
+								<div class="division-subtitle">
+									7 статей
 								</div>
 							</div>
-						</a>
-						<a href="#" class="list-group-item list-group-item-action no-border">
-							<div class="row">
-								<div class="col-3">
-									<div class="division my-2"></div>
+						</div>
+						<div class="division-wrap">
+							<div class="division division-img">
+							</div>
+							<div class="division-text">
+								<div class="division-title">
+									Транспорт
 								</div>
-								<div class="col-9">
-									<div class="my-2 pl-2">
-										<p><strong>Благоустройство</strong></p>
-										<p class="text-muted text-mini">20 статей</p>
-									</div>
+								<div class="division-subtitle">
+									7 статей
 								</div>
 							</div>
-						</a>
-						<a href="#" class="list-group-item list-group-item-action no-border">
-							<div class="row">
-								<div class="col-3">
-									<div class="division my-2"></div>
+						</div>
+						<div class="division-wrap">
+							<div class="division division-img">
+							</div>
+							<div class="division-text">
+								<div class="division-title">
+									Транспорт
 								</div>
-								<div class="col-9">
-									<div class="my-2 pl-2">
-										<p><strong>Тактический урбанизм</strong></p>
-										<p class="text-muted text-mini">2 статьи</p>
-									</div>
+								<div class="division-subtitle">
+									7 статей
 								</div>
 							</div>
-						</a>
-						<a href="#" class="list-group-item list-group-item-action no-border">
-							<div class="row">
-								<div class="col-3">
-									<div class="division my-2"></div>
+						</div>
+						<div class="division-wrap">
+							<div class="division division-img">
+							</div>
+							<div class="division-text">
+								<div class="division-title">
+									Транспорт
 								</div>
-								<div class="col-9">
-									<div class="my-2 pl-2">
-										<p><strong>Городской дизайн</strong></p>
-										<p class="text-muted text-mini">1 статья</p>
-									</div>
+								<div class="division-subtitle">
+									7 статей
 								</div>
 							</div>
-						</a>
-						<a href="#" class="list-group-item list-group-item-action no-border">
-							<div class="row">
-								<div class="col-3">
-									<div class="division my-2"></div>
+						</div>
+						<div class="division-wrap">
+							<div class="division division-img">
+							</div>
+							<div class="division-text">
+								<div class="division-title">
+									Транспорт
 								</div>
-								<div class="col-9">
-									<div class="my-2 pl-2">
-										<p><strong>Дорожная безопасность</strong></p>
-										<p class="text-muted text-mini">5 статей</p>
-									</div>
+								<div class="division-subtitle">
+									7 статей
 								</div>
 							</div>
-						</a>
+						</div>
 					</div>
 					<a href="#" class="text-muted text-mini underlined pt-2">Все разделы</a>
 				</div>
