Поправил рекомендации статей на странице статьи

--- a/app/article.html
+++ b/app/article.html
@@ -105,20 +105,22 @@
 					</div>
 					<h5 class="article-text article-title">Другие статьи из раздела</h5>
 
-						<div class="row">
-							<div class="col-md-4">
+					<div class="row">
+						<div class="col-md-4 mt-3 blank-block">
+							<a href="article.html">
 								<div class="blank"></div>
 								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
-							</div>
-							<div class="col-md-4 mt-3">
-								<div class="blank"></div>
-								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
-							</div>
-							<div class="col-md-4 mt-3">
-								<div class="blank"></div>
-								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
-							</div>
+							</a>
 						</div>
+						<div class="col-md-4 mt-3 blank-block">
+							<div class="blank"></div>
+							<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
+						</div>
+						<div class="col-md-4 mt-3 blank-block">
+							<div class="blank"></div>
+							<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
