Добавил образец реальной статьи

--- a/app/article.html
+++ b/app/article.html
@@ -81,7 +81,7 @@
 						<h2 class="h2-subtitle subtitle">Почему важно сделать пешехода заметным.</h2>
 					</div>
 
-					<div class="main mt-5">
+					<div class="main mt-4">
 						<img class="black article-img" width="70%" height="auto" src="img/articles/title.jpg" alt="title">
 					</div>
 
@@ -94,11 +94,11 @@
 							<h5 class="article-text article-title">Подзаголовок</h5>
 							<p class="article-text article-p">Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться.</p>
 							<p class="article-text article-p">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt numquam esse, ullam fuga repellendus labore ducimus aliquam dolor maiores quas. Iusto eligendi quasi tempora incidunt doloribus fugit ut, adipisci quae?</p>
-							<img class="article-img mt-5 mb-3" width="70%" height="auto" src="img/articles/subtitle.jpg" alt="sub">
+							<img class="article-img mb-3" width="70%" height="auto" src="img/articles/subtitle.jpg" alt="sub">
 							<p class="article-text img-p">Lorem ipsum dolor sit amet consectetur</p>
 							<p class="article-text article-p">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptas est cum ducimus impedit delectus cumque, voluptates unde dolor minus! Quaerat vel nam minima excepturi aperiam. Iure temporibus dolorem ipsa numquam?</p>
 							<div class="likely pt-5">
-								<div class="vkontakte"><strong class="medium-bold">11</strong></div>
+								<div class="vkontakte"><strong class="medium-bold"></strong></div>
 								<div class="telegram"><strong class="medium-bold">Отправить</strong></div>
 							</div>
 						</div>
