--- a/app/knowledge.html
+++ b/app/knowledge.html
@@ -93,14 +93,16 @@
 					<h5 class="h5-title">Все статьи</h5>
 					<div class="row">
 						<div class="col-md-4 mt-3 blank-block">
-							<a href="article.html">
-								<div class="blank"></div>
-								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
+							<a href="article/article_fence-mistake.html">
+								<div class="blank blank_fence-mistake"></div>
+								<p class="sub-title pt-2"><strong>Заборы в городе — ошибка</strong></p>
 							</a>
 						</div>
 						<div class="col-md-4 mt-3 blank-block">
-							<div class="blank"></div>
-							<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
+							<a href="article.html">
+								<div class="blank blank_article"></div>
+								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
+							</a>
 						</div>
 						<div class="col-md-4 mt-3 blank-block">
 							<div class="blank"></div>
