--- a/app/article/article_fence-mistake.html
+++ b/app/article/article_fence-mistake.html
@@ -76,7 +76,7 @@
 			<div class="row">
 				<div class="col-md-10">
 					<div class="text-left">
-						<h1 class="h1-title title">Как сделать безопасный пешеходный переход</h1>
+						<h1 class="h1-title title">Заборы в городе — ошибка</h1>
 					</div>
 
 					<div class="main mt-4">
