Отредактировал пункты меню карты

--- a/app/crosswalk.html
+++ b/app/crosswalk.html
@@ -142,24 +142,24 @@
                     </p>
                     <div class="collapse" id="collapse-know">
                         <div class="move move-body">
-                            <a href="knowledge.html" class="a-knowledge">
+                            <a href="article/article_crosswalk-for-city.html" class="a-knowledge">
                                 <div class="move-item">
                                     Зачем городу переходы?
                                 </div>
                             </a>
                             <a href="knowledge.html" class="a-knowledge">
-                                <div class="move-item item-bold">
-                                    Куда и как пожаловаться на пешеходный переход?
-                                </div>
-                            </a>
-                            <a href="knowledge.html" class="a-knowledge">
                                 <div class="move-item">
-                                    Почему заборы - это плохо?
+                                    Как делать безопасные переходы
                                 </div>
                             </a>
                             <a href="knowledge.html" class="a-knowledge">
                                 <div class="move-item item-light">
-                                    База знаний
+                                    Заборы в городе — ошибка
+                                </div>
+                            </a>
+                            <a href="knowledge.html" class="a-knowledge">
+                                <div class="move-item item-bold">
+                                    Куда и как пожаловаться на пешеходный переход?
                                 </div>
                             </a>
                         </div>
@@ -178,11 +178,6 @@
                             <a href="help.html" class="a-help">
                                 <div class="move-item">
                                     Как работает сервис
-                                </div>
-                            </a>
-                            <a href="help.html" class="a-help">
-                                <div class="move-item">
-                                    Помочь проекту
                                 </div>
                             </a>
                         </div>
