--- a/app/knowledge.html
+++ b/app/knowledge.html
@@ -99,14 +99,14 @@
 							</a>
 						</div>
 						<div class="col-md-4 mt-3 blank-block">
-							<a href="article.html">
+							<a href="article/article_crosswalk-for-city.html">
 								<div class="blank blank_article"></div>
-								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
+								<p class="sub-title pt-2"><strong>Зачем городу пешеходные переходы</strong></p>
 							</a>
 						</div>
 						<div class="col-md-4 mt-3 blank-block">
 							<div class="blank"></div>
-							<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
+							<p class="sub-title pt-2"><strong>Как делать безопасные переходы</strong></p>
 						</div>
 						<div class="col-md-4 mt-3 blank-block">
 							<div class="blank"></div>
