Создал разметку отдельного раздела

--- a/app/divTransport.html
+++ b/app/divTransport.html
@@ -73,15 +73,14 @@
 			<div class="row">
 				<div class="col-md-9">
 					<div class="text-left title-block">
-						<h1 class="h1-title title">База знаний</h1>
-						<h2 class="h2-subtitle subtitle">Рассказываем и показываем, как сделать город лучше.</h2>
+						<h1 class="h1-title title">Транспорт</h1>
+						<h2 class="h2-subtitle subtitle">Маршрутки, троллейбусы и выделенные полосы</h2>
 					</div>
 				</div>
 			</div>
 
 			<div class="row">
 				<div class="col-md-9">
-					<h5 class="h5-title">Все статьи</h5>
 					<div class="row">
 						<div class="col-md-4 mt-3 blank-block">
 							<a href="article/article_fence-mistake.html">
@@ -107,7 +106,7 @@
 				</div>
 
 				<div class="col-md-3">
-					<h5>Разделы</h5>
+					<h5>Другие разделы</h5>
 					<div class="division-block">
 						<a href="divTransport.html">
 							<div class="division-wrap">
