--- a/app/divisions.html
+++ b/app/divisions.html
@@ -22,9 +22,10 @@
 	<!-- Custom Browsers Color Start -->
 	<meta name="theme-color" content="#000">
 	<!-- Custom Browsers Color End -->
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,500&display=swap&subset=cyrillic,cyrillic-ext"
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap&subset=cyrillic,cyrillic-ext"
 		rel="stylesheet">
 	<link rel="stylesheet" href="css/main.min.css">
+
 	<link rel="stylesheet" href="css/knowledge.css">
 
 </head>
@@ -69,119 +70,86 @@
 	</header>
 
 	<main>
-		<div class="container">
+		<div class="container mt-5">
 			<div class="row">
 				<div class="col-md-9">
-					<div class="text-left title-block">
-						<h1 class="h1-title title">База знаний</h1>
-						<h2 class="h2-subtitle subtitle">Рассказываем и показываем, как сделать город лучше.</h2>
+					<div class="text-left">
+						<h3>Разделы</h3>
+						<p>Сборник статей, разделённых на разные темы.</p>
+					</div>
+				</div>
+				<div class="col-md-3"></div>
+			</div>
+
+			<div class="mt-5">
+				<div class="row">
+					<div class="col-md-12">
+						<div class="row">
+							<div class="col-md-3 mt-3">
+								<div class="blank"></div>
+								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
+							</div>
+							<div class="col-md-3 mt-3">
+								<div class="blank"></div>
+								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
+							</div>
+							<div class="col-md-3 mt-3">
+								<div>
+									<div class="blank"></div>
+									<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
+								</div>
+							</div>
+							<div class="col-md-3 mt-3">
+								<div class="blank"></div>
+								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
+							</div>
+						</div>
+						<div class="row">
+							<div class="col-md-3 mt-3">
+								<div class="blank"></div>
+								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
+							</div>
+							<div class="col-md-3 mt-3">
+								<div class="blank"></div>
+								<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
+							</div>
+							<div class="col-md-3 mt-3">
+								<div>
+									<div class="blank"></div>
+									<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
+								</div>
+							</div>
+							<div class="col-md-3 mt-3"></div>
+						</div>
 					</div>
 				</div>
 			</div>
-
-			<div class="row">
-				<div class="col-md-9">
-					<h5 class="h5-title">Все статьи</h5>
-					<div class="row">
-						<div class="col-md-4 mt-3 blank-block">
-							<a href="article/article_fence-mistake.html">
-								<div class="blank blank_fence-mistake"></div>
-								<p class="sub-title pt-2"><strong>Заборы в городе — ошибка</strong></p>
-							</a>
-						</div>
-						<div class="col-md-4 mt-3 blank-block">
-							<a href="article/article_crosswalk-for-city.html">
-								<div class="blank blank_article"></div>
-								<p class="sub-title pt-2"><strong>Зачем городу пешеходные переходы</strong></p>
-							</a>
-						</div>
-						<div class="col-md-4 mt-3 blank-block">
-							<div class="blank"></div>
-							<p class="sub-title pt-2"><strong>Как делать безопасные переходы</strong></p>
-						</div>
-						<div class="col-md-4 mt-3 blank-block">
-							<div class="blank"></div>
-							<p class="sub-title pt-2"><strong>Как сделать безопасные переходы</strong></p>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-3">
-					<h5>Разделы</h5>
-					<div class="division-block">
-						<a href="divTransport.html">
-							<div class="division-wrap">
-								<div class="division division-img">
-								</div>
-								<div class="division-text">
-									<div class="division-title">
-										Транспорт
-									</div>
-									<div class="division-subtitle">
-										7 статей
-									</div>
-								</div>
-							</div>
-						</a>
-						<div class="division-wrap">
-							<div class="division division-img">
-							</div>
-							<div class="division-text">
-								<div class="division-title">
-									Транспорт
-								</div>
-								<div class="division-subtitle">
-									7 статей
-								</div>
-							</div>
-						</div>
-						<div class="division-wrap">
-							<div class="division division-img">
-							</div>
-							<div class="division-text">
-								<div class="division-title">
-									Транспорт
-								</div>
-								<div class="division-subtitle">
-									7 статей
-								</div>
-							</div>
-						</div>
-						<div class="division-wrap">
-							<div class="division division-img">
-							</div>
-							<div class="division-text">
-								<div class="division-title">
-									Транспорт
-								</div>
-								<div class="division-subtitle">
-									7 статей
-								</div>
-							</div>
-						</div>
-						<div class="division-wrap">
-							<div class="division division-img">
-							</div>
-							<div class="division-text">
-								<div class="division-title">
-									Транспорт
-								</div>
-								<div class="division-subtitle">
-									7 статей
-								</div>
-							</div>
-						</div>
-					</div>
-					<a href="#" class="text-muted text-mini underlined pt-2">Все разделы</a>
-				</div>
-			</div>
-
 
 		</div>
 	</main>
-
+	<br><br><br>
 	<footer>
-		<div class="container-fluide container-footer">
+		<div class="container-fluid container-header" style="background: #3C444C;">
+			<div class="container header-wrap">
+				<div class="row">
+					<div class="pr-3"><a style="font-weight: 400; opacity: 0.3; color: white" href="">Сервисы</a></div>
+					<div class="pr-3"><a style="font-weight: 400; opacity: 0.3; color: white" href="">О нас</a></div>
+					<div class="pr-3"><a style="font-weight: 400; opacity: 0.3; color: white" href="">Помочь</a></div>
+					<div style="left: 38%;" class="header-social col-xl-2 offset-lg-3">
+						<div class="header__telegram">
+							<a href="https://vk.com/designbry"><img src="img/header/vk.svg" alt="https://vk.com/designbry"></a>
+						</div>
+						<div class="header__vk">
+							<a href="https://t.me/brurbanhelp"><img src="img/header/telegram.svg"
+									alt="https://t.me/brurbanhelp"></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
+	<footer class="">
+		<div class="container-fluid container-header">
 			<div class="container header-wrap">
 				<div class="row">
 					<div style="font-weight: 400; opacity: 0.3; color: white">Егор Кондрашов 2019</div>
